--- a/index.1.css
+++ b/index.1.css
@@ -100,12 +100,13 @@ p > img {
 }
 #section11 {
   position: absolute;
-  width: 100%;
-  gap: 24%;
+  width: 72%;
+  /* gap: 24%; */
   top: 220px;
+  left: 13%;
   display: flex;
   height: 100px;
-  justify-content: space-evenly;
+  justify-content: space-between;
   /* padding: 0 140px 0 140px; */
   /* background-color: aquamarine; */
 }
@@ -144,13 +145,14 @@ span {
   line-height: 20px;
 }
 .minis {
-  width: 100%;
+  width: 87%;
   /* background-color: blue; */
   position: absolute;
   top: 430px;
-  display: flex;
+  left: 13%;
+  /* display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: center; */
   gap: 30px;
   overflow-x: scroll;
   overflow-y: hidden;
@@ -360,7 +362,7 @@ span {
   position: absolute;
   top: 53px;
   left: 30px;
-  width: 180px;
+  width: 290px;
 }
 .laichu {
   opacity: 0;
